docs/7.54/md/abenabap_words.md
---
title: "ABAP Words"
description: |
  ABAP words are the vocabulary of the ABAP language. ABAP statements are composed of ABAP words, operands, and operators in accordance with defined syntax rules. ABAP words are taken from the English language and are grouped into ABAP language elements(https://help.sap.com/doc/abapdocu_754_index_ht
version: "7.54"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_words.htm"
abapFile: "abenabap_words.htm"
keywords: ["select", "insert", "update", "delete", "loop", "do", "while", "if", "case", "try", "catch", "method", "class", "data", "types", "abenabap", "words"]
---

* * *

AS ABAP Release 754, ©Copyright 2019 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap.htm) →  [ABAP − Reference](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_reference.htm) →  [ABAP Syntax](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_syntax.htm) →  [ABAP Statements](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_statements.htm) → 

ABAP Words

ABAP words are the vocabulary of the ABAP language. ABAP statements are composed of ABAP words, operands, and operators in accordance with defined syntax rules. ABAP words are taken from the English language and are grouped into [ABAP language elements](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_language_element_glosry.htm "Glossary Entry") and [ABAP language element additions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_language_elmnt_add_glosry.htm "Glossary Entry") that express the semantics of a statement. In addition to letters, ABAP words can also contain hyphens (\-) to form multi-word expressions. As well as ABAP words, some operators are also made up of letters.

If a statement is introduced using an ABAP word, the word is an [ABAP keyword](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_keyword_glosry.htm "Glossary Entry"). The remaining ABAP words are additions of a keyword. A single ABAP word can be used both as a keyword and as a non-keyword. For example, DATA is used as a keyword as well as an addition of other keywords. Not all statements are introduced using a keyword or contain ABAP words. Assignments with the [assignment operator \=](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenequals_operator.htm) or [method calls](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapcall_method_static_short.htm), for example, do not contain a keyword and do have to contain any other ABAP word.

ABAP words are not reserved names as in some programming languages. Although the use of an ABAP word for [naming conventions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abennaming_conventions.htm) is not forbidden, it should be avoided if possible. Even if this rule is followed, the introduction of new elements can cause similar situations and therefore suitable naming conventions should be observed for reserved names to avoid conflicts with language elements.

The following table contains all ABAP words in the current ABAP language version, the names of [built-in data types](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenpredefined_data_type_glosry.htm "Glossary Entry"), and the names (consisting of letters) of [operators](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenoperator_glosry.htm "Glossary Entry"). Names in ABAP programs are not case-sensitive.

ABAP\_SYSTEM\_TIMEZONE

ABAP\_USER\_TIMEZONE

ABAP-SOURCE

ABBREVIATED

ABBREVIATION

ABS

ABSTRACT

ACCEPT

ACCEPTING

ACCESS

ACCORDING

ACTION

ACTIVATION

ACTUAL

ADABAS

ADD

ADD-CORRESPONDING

ADJACENT

ADJUST\_NUMBERS

ALIAS

ALIASES

ALIGN

ALL

ALLOCATE

ALLOWED

ALPHA

AMDP

ANALYSIS

ANALYZER

AND

ANY

APPEND

APPENDAGE

APPENDING

APPLICATION

ARCHIVE

AREA

ARITHMETIC

AS

AS400

ASCENDING

ASSERT

ASSIGN

ASSIGNED

ASSIGNING

ASSOCIATION

ASSOCIATIONS

ASYNCHRONOUS

AT

ATTRIBUTES

AUTHORITY

AUTHORITY-CHECK

AVG

AVG,

BACK

BACKGROUND

BACKUP

BACKWARD

BADI

BALANCE

BASE

BEFORE

BEGIN

BEHAVIOR

BETWEEN

BIG

BINARY

BINTOHEX

BIT

BIT-AND

BIT-NOT

BIT-OR

BIT-XOR

BLACK

BLANK

BLANKS

BLOB

BLOCK

BLOCKS

BLUE

BOUND

BOUNDARIES

BOUNDS

BOXED

BREAK-POINT

BREAKUP

BT

BUFFER

BY

BYPASSING

BYTE

BYTE-CA

BYTE-CN

BYTE-CO

BYTE-CS

BYTE-NA

BYTE-NS

BYTE-ORDER

CA

CALL

CALLING

CASE

CAST

CASTING

CATCH

CDS

CEIL

CENTER

CENTERED

CHANGE

CHANGING

CHANNELS

CHAR

CHAR-TO-HEX

CHARACTER

CHECK

CHECK\_BEFORE\_SAVE

CHECKBOX

CHILD

CI\_

CIRCULAR

CL\_DBI\_UTILITIES

CLASS

CLASS-CODING

CLASS-DATA

CLASS-EVENTS

CLASS-METHODS

CLASS-POOL

CLEANUP

CLEAR

CLIENT

CLIENTS

CLNT

CLOB

CLOCK

CLOSE

CN

CO

COALESCE

CODE

CODING

COL\_BACKGROUND

COL\_GROUP

COL\_HEADING

COL\_KEY

COL\_NEGATIVE

COL\_NORMAL

COL\_POSITIVE

COL\_TOTAL

COLLECT

COLOR

COLUMN

COLUMNS

COMMENT

COMMENTS

COMMIT

COMMON

COMMUNICATION

COMPARING

COMPONENT

COMPONENTS

COMPRESSION

COMPUTE

CONCAT

CONCAT\_WITH\_SPACE

CONCATENATE

COND

CONDENSE

CONDITION

CONNECT

CONNECTION

CONSTANTS

CONTEXT

CONTEXTS

CONTINUE

CONTROL

CONTROLS

CONV

CONVERSION

CONVERT

COPIES

COPY

CORRESPONDING

COUNT

COUNTRY

COVER

CP

CPI

CREATE

CREATING

CRITICAL

CROSS

CS

CUKY

CURR

CURRENCY

CURRENCY\_CONVERSION

CURRENT

CURSOR

CUSTOMER-FUNCTION

CYCLES

D16N

D34N

DANGEROUS

DATA

DATABASE

DATAINFO

DATASET

DATE

DATN

DATS

DATS\_ADD\_DAYS

DATS\_ADD\_MONTHS

DATS\_DAYS\_BETWEEN

DATS\_IS\_VALID

DATS\_TIMS\_TO\_TSTMP

DAYLIGHT

DB2

DB6

DD/MM/YY

DD/MM/YYYY

DDL

DDMMYY

DEALLOCATE

DEC

DECIMAL\_SHIFT

DECIMALS

DECLARATIONS

DEEP

DEFAULT

DEFERRED

DEFINE

DEFINING

DEFINITION

DELETE

DELETING

DEMAND

DENSE\_RANK

DEPARTMENT

DEPENDENT

DEPTH

DESCENDING

DESCRIBE

DESTINATION

DETAIL

DETERMINISTIC

DIALOG

DIRECTORY

DISCARDING

DISCONNECT

DISPLAY

DISPLAY-MODE

DISTANCE

DISTINCT

DIV

DIVIDE

DIVIDE-CORRESPONDING

DIVISION

DO

DUMMY

DUPLICATE

DUPLICATES

DURATION

DURING

DYNAMIC

DYNPRO

EDIT

EDITOR-CALL

ELSE

ELSEIF

EMPTY

ENABLED

ENABLING

ENCODING

END

END-ENHANCEMENT-SECTION

END-LINES

END-OF-DEFINITION

END-OF-EDITING

END-OF-FILE

END-OF-PAGE

END-OF-SELECTION

END-TEST-INJECTION

END-TEST-SEAM

ENDAT

ENDCASE

ENDCATCH

ENDCLASS

ENDDO

ENDENHANCEMENT

ENDEXEC

ENDFORM

ENDFUNCTION

ENDIAN

ENDIF

ENDING

ENDINTERFACE

ENDLOOP

ENDMETHOD

ENDMODULE

ENDON

ENDPROVIDE

ENDSELECT

ENDTRY

ENDWHILE

ENDWITH

ENGINEERING

ENHANCEMENT

ENHANCEMENT-POINT

ENHANCEMENT-SECTION

ENHANCEMENTS

ENTITIES

ENTITY

ENTRIES

ENTRY

ENUM

ENVIRONMENT

EQ

EQUIV

ERROR

ERRORS

ESCAPE

ESCAPING

ETAG

EVENT

EVENTS

EXACT

EXCEPT

EXCEPTION

EXCEPTION-TABLE

EXCEPTIONS

EXCLUDE

EXCLUDING

EXEC

EXECUTE

EXISTS

EXIT

EXIT-COMMAND

EXPAND

EXPANDING

EXPIRATION

EXPLICIT

EXPONENT

EXPORT

EXPORTING

EXPOSE

EXTENDED

EXTENSION

EXTERNAL

EXTRACT

FAIL

FAILED

FETCH

FIELD

FIELD-GROUPS

FIELD-SYMBOL

FIELD-SYMBOLS

FIELDS

FILE

FILTER

FILTER-TABLE

FILTERS

FINAL

FINALIZE

FIND

FIRST

FIRST-LINE

FIXED-POINT

FKEQ

FKGE

FLOOR

FLTP

FLTP\_TO\_DEC

FLUSH

FONT

FOR

FORM

FORMAT

FORWARD

FOUND

FRACTIONAL

FRAME

FRAMES

FREE

FRIENDS

FROM

FULL

FUNCTION

FUNCTION-POOL

FUNCTIONALITY

FURTHER

GAPS

GE

GENERATE

GET

GIVING

GKEQ

GKGE

GLOBAL

GREEN

GROUP

GROUPING

GROUPS

GT

HANDLE

HANDLER

HARMLESS

HASHED

HAVING

HDB

HEAD-LINES

HEADER

HEADERS

HEADING

HELP-ID

HELP-REQUEST

HEXTOBIN

HIDE

HIERARCHY

HIERARCHY\_ANCESTORS

HIERARCHY\_ANCESTORS\_AGGREGATE

HIERARCHY\_DESCENDANTS

HIERARCHY\_DESCENDANTS\_AGGREGATE

HIERARCHY\_SIBLINGS

HIGH

HINT

HOLD

HOTSPOT

ICON

ID

IDENTIFICATION

IDENTIFIER

IDS

IF

IGNORE

IGNORING

IMMEDIATELY

IMPLEMENTATION

IMPLEMENTATIONS

IMPLEMENTED

IMPLICIT

IMPORT

IMPORTING

IN

INACTIVE

INCL

INCLUDE

INCLUDES

INCLUDING

INCREMENT

INDEX

INDEX-LINE

INDICATORS

INFOTYPES

INHERITING

INIT

INITIAL

INITIALIZATION

INNER

INOUT

\*-INPUT

INPUT

INSERT

INSTANCE

INSTANCES

INSTR

INT1

INT2

INT4

INT8

INTENSIFIED

INTERFACE

INTERFACE-POOL

INTERFACES

INTERNAL

INTERVALS

INTO

INVERSE

INVERTED-DATE

IS

ISO

ITNO

JOB

JOIN

KEEP

KEEPING

KERNEL

KEY

KEYS

KEYWORDS

KIND

LAG

LANG

LANGUAGE

LAST

LATE

LAYOUT

LE

LEAD

LEADING

LEAVE

LEAVES

LEFT

LEFT-JUSTIFIED

LEFTPLUS

LEFTSPACE

LEGACY

LENGTH

LET

LEVEL

LEVELS

LIKE

LINE

LINE-COUNT

LINE-SELECTION

LINE-SIZE

LINEFEED

LINES

LINK

LIST

LIST-PROCESSING

LISTBOX

LITTLE

LLANG

LOAD

LOAD-OF-PROGRAM

LOB

LOCAL

LOCALE

LOCATOR

LOCK

LOCKS

LOG-POINT

LOGFILE

LOGICAL

LONG

LOOP

LOW

LOWER

LPAD

LPI

LT

LTRIM

MAIL

MAIN

MAJOR-ID

MANAGED

MANDATORY

MANY

MAPPED

MAPPING

MARGIN

MARK

MASK

MASTER

MATCH

MATCHCODE

MATCHED

MAX

MAXIMUM

MEASURES

MEDIUM

MEMBERS

MEMORY

MESH

MESSAGE

MESSAGE-ID

MESSAGES

MESSAGING

METHOD

METHODS

MIN

MINIMUM

MINOR-ID

MM/DD/YY

MM/DD/YYYY

MMDDYY

MOD

MODE

MODIF

MODIFIER

MODIFY

MODULE

MOVE

MOVE-CORRESPONDING

MSSQLNT

MULTIPLE

MULTIPLY

MULTIPLY-CORRESPONDING

NA

NAME

NAMETAB

NATIVE

NB

NE

NESTED

NESTING

NEW

NEW-LINE

NEW-PAGE

NEW-SECTION

NEXT

NO

NO-DISPLAY

NO-EXTENSION

NO-GAP

NO-GAPS

NO-GROUPING

NO-HEADING

NO-SCROLLING

NO-SIGN

NO-TITLE

NO-TOPOFPAGE

NO-ZERO

NODE

NODES

NON-UNICODE

NON-UNIQUE

NOT

NP

NS

NULL

NUMBER

NUMBERING

NUMC

OBJECT

OBJECTS

OBLIGATORY

OCCURRENCE

OCCURRENCES

OCCURS

OF

OFF

OFFSET

OLE

ON

ONE

ONLY

OPEN

OPERATIONS

OPTION

OPTIONAL

OPTIONS

OR

ORACLE

ORDER

ORPHANS

OTHER

OTHERS

OUT

OUTER

OUTPUT

OUTPUT-LENGTH

OVER

OVERFLOW

OVERLAY

PACK

PACKAGE

PAD

PADDING

PAGE

PAGES

PARAMETER

PARAMETER-TABLE

PARAMETERS

PARENT

PARENTS

PART

PARTIALLY

PARTITION

PATTERN

PERCENTAGE

PERFORM

PERFORMING

PERIOD

PERSON

PF

PF-STATUS

PINK

PLACE

PLACES

POOL

POS\_HIGH

POS\_LOW

POSITION

PRAGMAS

PRECOMPILED

PREFERRED

PRESERVING

PRIMARY

PRINT

PRINT-CONTROL

PRIORITY

PRIVATE

PRIVILEGED

PROCEDURE

PRODUCT

PROGRAM

PROPERTY

PROTECTED

PROVIDE

PUBLIC

PUSH

PUSHBUTTON

PUT

QUAN

QUEUE-ONLY

QUICKINFO

RADIOBUTTON

RAISE

RAISING

RANGE

RANGES

RANK

RAW

READ

READ-ONLY

READER

RECEIVE

RECEIVED

RECEIVER

RECEIVING

RED

REDEFINITION

REDIRECTED

REDUCE

REDUCED

REF

REFERENCE

REFRESH

REGEX

REJECT

REMOTE

RENAMING

REPLACE

REPLACEMENT

REPLACING

REPORT

REPORTED

REQUESTED

RESERVE

RESET

RESOLUTION

RESPECTING

RESPONSE

RESPONSES

RESPONSIBLE

RESULT

RESULTS

RESUMABLE

RESUME

RETRY

RETURN

RETURNCODE

RETURNING

RIGHT

RIGHT-JUSTIFIED

RIGHTPLUS

RIGHTSPACE

RISK

RMC\_COMMUNICATION\_FAILURE

RMC\_INVALID\_STATUS

RMC\_SYSTEM\_FAILURE

ROLLBACK

ROOT

ROUND

ROW\_NUMBER

ROWS

RPAD

RTRIM

RUN

SAP

SAP-SPOOL

SAVE

SAVING

SCALE\_PRESERVING

SCALE\_PRESERVING\_SCIENTIFIC

SCAN

SCHEMA

SCIENTIFIC

SCIENTIFIC\_WITH\_LEADING\_ZERO

SCREEN

SCROLL

SCROLL-BOUNDARY

SCROLLING

SEARCH

SECONDARY

SECONDS

SECTION

SELECT

SELECT-OPTIONS

SELECTION

SELECTION-SCREEN

SELECTION-SET

SELECTION-SETS

SELECTION-TABLE

SELECTIONS

SEND

SEPARATE

SEPARATED

SERVICE

SESSION

SET

SETS

SHARED

SHIFT

SHORT

SHORTDUMP

SHORTDUMP-ID

SIBLINGS

SIGN

SIGN\_AS\_POSTFIX

SIMPLE

SINGLE

SIZE

SKIP

SKIPPING

SMART

SOME

SORT

SORTABLE

SORTED

SOURCE

SPACE

SPANTREE

SPECIFIED

SPLIT

SPOOL

SPOTS

SQL

SQLSCRIPT

SSTRING

STABLE

STAMP

STANDARD

START

START-OF-EDITING

START-OF-SELECTION

STARTING

STATE

STATEMENT

STATEMENTS

STATIC

STATICS

STATUSINFO

STEP-LOOP

STOP

STRING\_AGG

STRUCTURE

STRUCTURES

STYLE

SUBKEY

SUBMATCHES

SUBMIT

SUBROUTINE

SUBSCREEN

SUBSTRING

SUBTOTAL

SUBTRACT

SUBTRACT-CORRESPONDING

SUFFIX

SUM

SUMMARY

SUMMING

SUPPLIED

SUPPLY

SUPPRESS

SWITCH

SWITCHSTATES

SYBASE

SYMBOL

SYNCPOINTS

SYNTAX

SYNTAX-CHECK

SYNTAX-TRACE

SYSTEM-CALL

SYSTEM-EXCEPTIONS

SYSTEM-EXIT

T000

TAB

TABBED

TABLE

TABLES

TABLEVIEW

TABSTRIP

TARGET

TASK

TASKS

TEST

TEST-INJECTION

TEST-SEAM

TESTING

TEXT

TEXTPOOL

THEN

THROW

TIME

TIMES

TIMESTAMP

TIMEZONE

TIMN

TIMS

TIMS\_IS\_VALID

TITLE

TITLE-LINES

TITLEBAR

?TO

TO

TOKENIZATION

TOKENS

TOP-LINES

TOP-OF-PAGE

TOTAL

TRACE-ENTRY

TRACE-FILE

TRACE-TABLE

TRAILING

TRANSACTION

TRANSFER

TRANSFORMATION

TRANSLATE

TRANSPORTING

TRMAC

TRUNCATE

TRUNCATION

TRY

TSTMP\_ADD\_SECONDS

TSTMP\_CURRENT\_UTCTIMESTAMP

TSTMP\_IS\_VALID

TSTMP\_SECONDS\_BETWEEN

TSTMP\_TO\_DATS

TSTMP\_TO\_DST

TSTMP\_TO\_TIMS

TYPE

TYPE-POOL

TYPE-POOLS

TYPES

ULINE

UNASSIGN

UNDER

UNICODE

UNION

UNIQUE

UNIT

UNIT\_CONVERSION

UNIX

UNMANAGED

UNPACK

UNTIL

UNWIND

UP

UPDATE

UPPER

USER

USER-COMMAND

USING

UTCL

UTCLONG

UTF-8

UUID

VALID

VALUE

VALUE-REQUEST

VALUES

VARY

VARYING

VERIFICATION-MESSAGE

VERSION

VIA

VISIBLE

WAIT

WHEN

WHERE

WHILE

WIDTH

WINDOW

WINDOWS

WITH

WITH-HEADING

WITH-TITLE

WITHOUT

WORD

WORK

WRITE

WRITER

XML

XSD

YELLOW

YES

YYMMDD

ZERO

ZONE